Fix alignment to handle more fields

--- a/src/app/views/tasks/type/cost-estimate-approval-task.component.scss
+++ b/src/app/views/tasks/type/cost-estimate-approval-task.component.scss
@@ -38,9 +38,8 @@ table.task-list {
     td:first-child {
       border-top-left-radius: 5px;
       border-bottom-left-radius: 5px;
-      width: 300px;
+      width: 150px;
       display: inline-block;
-      overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
     }
